--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 /*--this is how we reset the setting*/
-*
-{
-    margin:0;
-    padding: 0%;
-    box-sizing: border-box;
+body{
+background-image:url('https://wallpapers.com/images/hd/salesforce-6hiyuozipjpp19bc.jpg');
+padding: 0px;
+margin: 0px;
+box-sizing: 0px;
+
 }
+
 h1
 {
     text-align: center;
+    color: white;
 }
 input,label
 {
@@ -18,8 +21,9 @@ display: block;
 }
 label 
 {
-    color: rgba(81, 135, 27, 0.925);
-   
+   color: black;
+   color: white;
+
 }
 
 form
@@ -28,6 +32,9 @@ form
  max-width: 500px;
     padding:15px;
     margin:auto;
+    border-color:white;
+    ;
+   
 }
 input
 {
